src/objects/Client_Location__c.object
<CustomObject>
    <description>A location of a piece of infrastructure for a client (or us). This could be a FVR radio station or a WFP Warehouse etc</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account for the client who owns this location</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Locations</relationshipLabel>
        <relationshipName>Client_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>The description of the location</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <description>The name that will be displayed on a map of this location</description>
        <label>Display Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The district that this location is in</description>
        <label>District</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Client Locations</relationshipLabel>
        <relationshipName>Client_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>Must include if this is to show up on a map</description>
        <label>Latitude</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <description>Must be added if this is to show up on a map</description>
        <label>Longitude</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An optional person object that has control of the location</description>
        <inlineHelpText>Leave blank if this location is not tied to a specific person</inlineHelpText>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Client Locations</relationshipLabel>
        <relationshipName>Client_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of location for this record</description>
        <inlineHelpText>If you do not see the type you are looking for then contact tech to add it for you.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Radio Station</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRAC Health Branch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rain gauge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Client Location</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CL-{0000000000}</displayFormat>
        <label>Client Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I70000000QP4fEAG_00N70000002sjTJEAY</fullName>
        <active>true</active>
        <field>BRAC_PA__c.Client_Location__c</field>
        <filterItems>
            <field>Client_Location__c.Type__c</field>
            <operation>equals</operation>
            <value>BRAC Health Branch</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>BRAC PA_Client Location</name>
    </namedFilters>
    <pluralLabel>Client Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>